[gd_scene load_steps=6 format=3 uid="uid://cf2ibhajljdi8"]

[ext_resource type="Script" uid="uid://dwhwyto4gh0g7" path="res://scripts/title_screen.gd" id="1_dc4i4"]
[ext_resource type="FontFile" uid="uid://d31hlyei8pa20" path="res://assets/fonts/Ephesis-Regular.ttf" id="1_mgrm8"]
[ext_resource type="Texture2D" uid="uid://0bwhb711gwu2" path="res://assets/characters/sol_01.png" id="3_e54dn"]
[ext_resource type="Texture2D" uid="uid://5gvfkehd55t5" path="res://assets/characters/luna_01.png" id="4_3yumr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cs5ya"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dc4i4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1536.0
offset_bottom = 864.0
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="Padding" type="ColorRect" parent="."]
z_index = -9
layout_mode = 0
offset_left = -376.0
offset_top = -320.0
offset_right = 1896.0
offset_bottom = 1184.0
mouse_filter = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -160.0
offset_right = 142.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_mgrm8")
theme_override_font_sizes/font_size = 56
text = "Sa 'yo, Luna"
horizontal_alignment = 1

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 504.0
offset_right = 896.0
offset_bottom = 556.0
theme_override_fonts/font = ExtResource("1_mgrm8")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_cs5ya")
text = "start story"

[node name="Credits" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 568.0
offset_right = 896.0
offset_bottom = 620.0
theme_override_fonts/font = ExtResource("1_mgrm8")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_cs5ya")
text = "credits"

[node name="Exit" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 707.0
offset_top = 654.0
offset_right = 835.0
offset_bottom = 702.0
theme_override_fonts/font = ExtResource("1_mgrm8")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_cs5ya")
text = "exit"

[node name="Sol" type="Sprite2D" parent="."]
position = Vector2(768, 430)
scale = Vector2(0.23, 0.23)
texture = ExtResource("3_e54dn")

[node name="Luna" type="Sprite2D" parent="."]
visible = false
position = Vector2(921, 382)
scale = Vector2(0.22, 0.22)
texture = ExtResource("4_3yumr")

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
